Some work in the API for User, missing tests

--- a/GoingOn/GoingOn/GoingOn.csproj
+++ b/GoingOn/GoingOn/GoingOn.csproj
@@ -151,10 +151,15 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Frontend\News.cs" />
+    <Compile Include="Frontend\User.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\IUserDB.cs" />
+    <Compile Include="Persistence\PersistenceException.cs" />
+    <Compile Include="Persistence\MemoryDB\UserMemoryDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
