--- a/GoingOn/packages/repositories.config
+++ b/GoingOn/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\GoingOn.AcceptanceTests\GoingOn.AcceptanceTests\packages.config" />
+  <repository path="..\GoingOn.AcceptanceTests\packages.config" />
   <repository path="..\GoingOn.Tests\packages.config" />
   <repository path="..\GoingOn\packages.config" />
 </repositories>
