Added E2E tests for update user

--- a/GoingOn/Client/Client.csproj
+++ b/GoingOn/Client/Client.csproj
@@ -34,8 +34,14 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\User.cs" />
+    <Compile Include="Entities\UserClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GoingOn\Frontend.csproj">
+      <Project>{4e84c04b-d78d-433d-97ea-cb52b72c04c6}</Project>
+      <Name>Frontend</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
