--- a/GoingOn/GoingOn.Tests/Frontend.Tests.csproj
+++ b/GoingOn/GoingOn.Tests/Frontend.Tests.csproj
@@ -129,6 +129,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
+      <Project>{D362A6E1-A218-4E3D-8D1F-0A8FC1822219}</Project>
+      <Name>Common.Tests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\GoingOn\Frontend.csproj">
       <Project>{4E84C04B-D78D-433D-97EA-CB52B72C04C6}</Project>
       <Name>Frontend</Name>
