--- a/GoingOn/Common.Tests/Common.Tests.csproj
+++ b/GoingOn/Common.Tests/Common.Tests.csproj
@@ -39,8 +39,17 @@
     <Compile Include="NewsBllEqualityComparer.cs" />
     <Compile Include="UserBllEqualityComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserCompleteEqualityComparer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Client\Client.csproj">
+      <Project>{6F595F59-04E5-4500-8893-451062B142B9}</Project>
+      <Name>Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GoingOn\Frontend.csproj">
+      <Project>{4E84C04B-D78D-433D-97EA-CB52B72C04C6}</Project>
+      <Name>Frontend</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Model\Model.csproj">
       <Project>{73D68FF8-7F66-426F-8320-89BC224D3B09}</Project>
       <Name>Model</Name>
