--- a/GoingOn/EndToEndTests/EndToEnd.Tests.csproj
+++ b/GoingOn/EndToEndTests/EndToEnd.Tests.csproj
@@ -41,6 +41,10 @@
     <Reference Include="Microsoft.Owin.Hosting">
       <HintPath>..\packages\Microsoft.Owin.Hosting.3.0.0\lib\net45\Microsoft.Owin.Hosting.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -65,6 +69,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UserClientEqualityComparer.cs" />
     <Compile Include="UserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -72,6 +77,10 @@
     <ProjectReference Include="..\Client\Client.csproj">
       <Project>{6F595F59-04E5-4500-8893-451062B142B9}</Project>
       <Name>Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
+      <Project>{D362A6E1-A218-4E3D-8D1F-0A8FC1822219}</Project>
+      <Name>Common.Tests</Name>
     </ProjectReference>
     <ProjectReference Include="..\GoingOn\Frontend.csproj">
       <Project>{4E84C04B-D78D-433D-97EA-CB52B72C04C6}</Project>
