--- a/GoingOn/Common.Tests/Common.Tests.csproj
+++ b/GoingOn/Common.Tests/Common.Tests.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Compile Include="AssertExtensions.cs" />
     <Compile Include="NewsBllEqualityComparer.cs" />
+    <Compile Include="NewsCompleteEqualityComparer.cs" />
     <Compile Include="UserBllEqualityComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserCompleteEqualityComparer.cs" />
