--- a/GoingOn/GoingOn.Tests/packages.config
+++ b/GoingOn/GoingOn.Tests/packages.config
@@ -1,17 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="HttpClientExtensions" version="1.0.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.7" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net45" />
   <package id="System.Web.Mvc.Extensions.Mvc.4" version="1.0.9" targetFramework="net45" />
