--- a/GoingOn/Storage.Tests/Storage.Tests.csproj
+++ b/GoingOn/Storage.Tests/Storage.Tests.csproj
@@ -53,11 +53,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="NewsMemoryStorageTests.cs" />
-    <Compile Include="NewsMemoryTests.cs" />
+    <Compile Include="DocumentDBStorageTests\UserDocumentDBStorageTests.cs" />
+    <Compile Include="MemoryStorageTests\NewsMemoryStorageTests.cs" />
+    <Compile Include="MemoryStorageTests\NewsMemoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UserMemoryStorageTests.cs" />
-    <Compile Include="UserMemoryTests.cs" />
+    <Compile Include="MemoryStorageTests\UserMemoryStorageTests.cs" />
+    <Compile Include="MemoryStorageTests\UserMemoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
@@ -76,6 +77,7 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
