--- a/GoingOn/Storage.Tests/Storage.Tests.csproj
+++ b/GoingOn/Storage.Tests/Storage.Tests.csproj
@@ -82,10 +82,11 @@
   </Choose>
   <ItemGroup>
     <Compile Include="MemoryStorageTests\NewsMemoryTests.cs" />
+    <Compile Include="MemoryStorageTests\UserMemoryStorageTests.cs" />
     <Compile Include="NewsStorageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MemoryStorageTests\UserMemoryTests.cs" />
-    <Compile Include="TableStorageTests\TableStorageTests.cs" />
+    <Compile Include="TableStorageTests\UserTableStorageTests.cs" />
     <Compile Include="UserStorageTests.cs" />
   </ItemGroup>
   <ItemGroup>
