Cleaning up + adding cities

--- a/GoingOn/Common/Common.csproj
+++ b/GoingOn/Common/Common.csproj
@@ -39,6 +39,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="City.cs" />
     <Compile Include="HttpClientExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
