--- a/GoingOn/Storage.Tests/Storage.Tests.csproj
+++ b/GoingOn/Storage.Tests/Storage.Tests.csproj
@@ -85,7 +85,7 @@
   <ItemGroup>
     <Compile Include="NewsStorageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TableStorageTests\UserTableStorageTests.cs" />
+    <Compile Include="UserTableStorageTests.cs" />
     <Compile Include="UserStorageTests.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -103,7 +103,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
