All the tests are finally passing. Next step will be to improve back code coverage and do some code coverage.

--- a/GoingOn/Frontend/packages.config
+++ b/GoingOn/Frontend/packages.config
@@ -1,36 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
-  <package id="bootstrap" version="3.0.0" targetFramework="net45" />
-  <package id="HawkNet" version="1.4.2.0" targetFramework="net45" />
-  <package id="HawkNet.WebApi" version="1.4.3.0" targetFramework="net45" />
-  <package id="HttpClientExtensions" version="1.0.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
-  <package id="Microsoft.Bcl" version="1.1.7" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Hosting" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Moq" version="4.2.1409.1722" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
-  <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Respond" version="1.2.0" targetFramework="net45" />
-  <package id="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net45" />
-  <package id="Unity" version="3.5.1404.0" targetFramework="net45" />
-  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
-  <package id="Xbehave" version="1.1.0" targetFramework="net45" />
-  <package id="xunit" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
+  <package newsId="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package newsId="bootstrap" version="3.0.0" targetFramework="net45" />
+  <package newsId="HawkNet" version="1.4.2.0" targetFramework="net45" />
+  <package newsId="HawkNet.WebApi" version="1.4.3.0" targetFramework="net45" />
+  <package newsId="HttpClientExtensions" version="1.0.2" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.WebApi.HelpPage" version="5.2.0" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.WebApi.Owin" version="5.2.2" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.WebApi.OwinSelfHost" version="5.2.2" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net45" />
+  <package newsId="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
+  <package newsId="Microsoft.Bcl" version="1.1.7" targetFramework="net45" />
+  <package newsId="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
+  <package newsId="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
+  <package newsId="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
+  <package newsId="Microsoft.Owin.Host.HttpListener" version="3.0.0" targetFramework="net45" />
+  <package newsId="Microsoft.Owin.Hosting" version="3.0.0" targetFramework="net45" />
+  <package newsId="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package newsId="Moq" version="4.2.1409.1722" targetFramework="net45" />
+  <package newsId="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
+  <package newsId="Owin" version="1.0" targetFramework="net45" />
+  <package newsId="Respond" version="1.2.0" targetFramework="net45" />
+  <package newsId="StyleCop.MSBuild" version="4.7.49.0" targetFramework="net45" />
+  <package newsId="Unity" version="3.5.1404.0" targetFramework="net45" />
+  <package newsId="WebGrease" version="1.6.0" targetFramework="net45" />
+  <package newsId="Xbehave" version="1.1.0" targetFramework="net45" />
+  <package newsId="xunit" version="1.9.2" targetFramework="net45" />
+  <package newsId="xunit.extensions" version="1.9.2" targetFramework="net45" />
 </packages>
