--- a/GoingOn/Common.Tests/Common.Tests.csproj
+++ b/GoingOn/Common.Tests/Common.Tests.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GoingOn.Common.Tests</RootNamespace>
-    <AssemblyName>Common.Tests</AssemblyName>
+    <AssemblyName>GoingOn.Common.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
