--- a/GoingOn/Common/Common.csproj
+++ b/GoingOn/Common/Common.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GoingOn.Common</RootNamespace>
-    <AssemblyName>Common</AssemblyName>
+    <AssemblyName>GoingOn.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
