--- a/GoingOn/Frontend.Tests/Frontend.Tests.csproj
+++ b/GoingOn/Frontend.Tests/Frontend.Tests.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GoingOn.Frontend.Tests</RootNamespace>
-    <AssemblyName>GoingOn.Tests</AssemblyName>
+    <AssemblyName>GoingOn.GoingOn.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
