--- a/GoingOn/Model/Model.csproj
+++ b/GoingOn/Model/Model.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GoingOn.Model</RootNamespace>
-    <AssemblyName>Model</AssemblyName>
+    <AssemblyName>GoingOn.Model</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
