--- a/GoingOn/Storage/Storage.csproj
+++ b/GoingOn/Storage/Storage.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{90E34909-07F8-4EAC-BF0E-285474BFD909}</ProjectGuid>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GoingOn.Storage</RootNamespace>
-    <AssemblyName>Storage</AssemblyName>
+    <AssemblyName>GoingOn.Storage</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
