--- a/GoingOn/EndToEndTests/EndToEnd.Tests.csproj
+++ b/GoingOn/EndToEndTests/EndToEnd.Tests.csproj
@@ -48,6 +48,7 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -76,8 +77,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="NewsClientEqualityComparer.cs" />
+    <Compile Include="NewsTestsLocalhost.cs" />
     <Compile Include="NewsTests.cs" />
     <Compile Include="UserClientEqualityComparer.cs" />
+    <Compile Include="UserTestsLocalhost.cs" />
     <Compile Include="UserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -85,10 +88,6 @@
     <ProjectReference Include="..\Client\Client.csproj">
       <Project>{6F595F59-04E5-4500-8893-451062B142B9}</Project>
       <Name>Client</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Common.Tests\Common.Tests.csproj">
-      <Project>{D362A6E1-A218-4E3D-8D1F-0A8FC1822219}</Project>
-      <Name>Common.Tests</Name>
     </ProjectReference>
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{9fa45d25-4549-4de4-9827-0b218ebab7ce}</Project>
