Quick Fixing hot news controller

--- a/GoingOn/packages/repositories.config
+++ b/GoingOn/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\EndToEndTests\packages.config" />
   <repository path="..\Frontend.Tests\packages.config" />
   <repository path="..\Frontend\packages.config" />
+  <repository path="..\FrontendWebRole.Tests\packages.config" />
   <repository path="..\FrontendWebRole\packages.config" />
   <repository path="..\Storage.Tests\packages.config" />
   <repository path="..\Storage\packages.config" />
