--- a/NewsFinder/NewsFinderWorkerRole/app.config
+++ b/NewsFinder/NewsFinderWorkerRole/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="GoingOnEndpoint" value="http://goingontest.azurewebsites.net" />
+    <add key="GoingOnEndpoint" value="http://goingonproduction.azurewebsites.net" />
     <add key="NewsFinderWorkerRoleUsername" value="NewsFinderUsername" />
     <add key="NewsFinderWorkerRolePassword" value="NewsFinderPassword" />
   </appSettings>
