Adding more tests. Build is broken now.

--- a/GoingOn/Storage.Tests/Storage.Tests.csproj
+++ b/GoingOn/Storage.Tests/Storage.Tests.csproj
@@ -84,6 +84,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Entitites\NewsEntityTests.cs" />
+    <Compile Include="Entitites\UserEntityTests.cs" />
+    <Compile Include="HotNewsStorageTests.cs" />
     <Compile Include="NewsStorageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserStorageTests.cs" />
