--- a/GoingOn/Frontend/Frontend.csproj
+++ b/GoingOn/Frontend/Frontend.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A1E3D701-26EC-4AA9-A387-6755A5C80072}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Frontend</RootNamespace>
-    <AssemblyName>Frontend</AssemblyName>
+    <RootNamespace>GoingOn.Frontend</RootNamespace>
+    <AssemblyName>GoingOn.Frontend</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
