FE tests finished

--- a/GoingOn/FrontendWebRole.Tests/FrontendWebRole.Tests.csproj
+++ b/GoingOn/FrontendWebRole.Tests/FrontendWebRole.Tests.csproj
@@ -138,6 +138,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\HotNewsControllerTests.cs" />
     <Compile Include="Controllers\UserControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
