--- a/GoingOn/Frontend/Frontend.csproj
+++ b/GoingOn/Frontend/Frontend.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Entities\UserREST.cs" />
     <Compile Include="Links\Link.cs" />
     <Compile Include="Links\LinkFactory.cs" />
+    <Compile Include="Links\NewsImageLinkFactory.cs" />
     <Compile Include="Links\NewsLinkFactory.cs" />
     <Compile Include="Links\Rels.cs" />
     <Compile Include="Links\UserLinkFactory.cs" />
