A bit of cleanup for TODO items

--- a/GoingOn/Common.Tests/Common.Tests.csproj
+++ b/GoingOn/Common.Tests/Common.Tests.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssertExtensions.cs" />
-    <Compile Include="AuthorizationHelper.cs" />
+    <Compile Include="Base64Helper.cs" />
     <Compile Include="NewsBllEqualityComparer.cs" />
     <Compile Include="NewsCompleteEqualityComparer.cs" />
     <Compile Include="GOUriBuilderTests.cs" />
