--- a/GoingOn/Storage.Tests/Storage.Tests.csproj
+++ b/GoingOn/Storage.Tests/Storage.Tests.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Spatial, Version=5.6.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\System.Spatial.5.6.2\lib\net40\System.Spatial.dll</HintPath>
@@ -87,6 +88,7 @@
     <Compile Include="Entitites\NewsEntityTests.cs" />
     <Compile Include="Entitites\UserEntityTests.cs" />
     <Compile Include="HotNewsStorageTests.cs" />
+    <Compile Include="NewsImageBlobStorageTests.cs" />
     <Compile Include="NewsStorageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserStorageTests.cs" />
@@ -111,7 +113,11 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="goku.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
