--- a/GoingOn/Frontend/Frontend.csproj
+++ b/GoingOn/Frontend/Frontend.csproj
@@ -159,9 +159,13 @@
       <Project>{73D68FF8-7F66-426F-8320-89BC224D3B09}</Project>
       <Name>Model</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Storage\Storage.csproj">
+    <ProjectReference Include="..\Repository\Repository.csproj">
+      <Project>{87DE0C26-CC33-4111-9756-5543ACB4CC9B}</Project>
+      <Name>Repository</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Storage\XStoreProxy.csproj">
       <Project>{90E34909-07F8-4EAC-BF0E-285474BFD909}</Project>
-      <Name>Storage</Name>
+      <Name>XStoreProxy</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
